# compare_integrators

./: CMakeLists.txt  Makefile  README.md  integrators.cpp  integrators.hpp  print_legendre_roots.py  test_integration.cpp
